--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -95,11 +95,12 @@ articletitle
 \input{chapters/acknowledgements}
 \input{chapters/abstract}
 \tableofcontents
+\thispagestyle{plain}
 \chapter{Introduction}
 \input{chapters/introduction}
-\chapter{Multiplier-Acclerator Business Cycles}\label{ch:multiplier-accelerator}
+\chapter{Multiplier-Accelerator Business Cycles}\label{ch:multiplier-accelerator}
 \input{chapters/multiplier-accelerator}
-\chapter{Heterogenous Inventory Cycles by Wegener et al.}
+\chapter{Heterogenous Inventory Cycles by Wegener et al.}\label{ch:metzlerian_simple}
 \input{chapters/metzlerian_basic}
 \chapter{Inventory Cycles with Averaged Expectations,\\ Endogenous Investment, and Consumption Lag}\label{ch:metzlerian-expanded}
 \input{chapters/metzlerian_expanded}
@@ -108,6 +109,8 @@ articletitle
 \chapter{References}
 \input{chapters/references}
 \begin{appendices}
+\chapter{Simplifying Wegener et al.'s Inventory Cycle Model}\label{appendix_metzler}
+\input{chapters/appendix_metzler}
 \chapter{Solving for Change in Income}\label{appendix_growth}
 \input{chapters/appendix_growth}
 \chapter{Computational Analysis of the Logistic Map}
