--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -81,13 +81,15 @@ articletitle
 		of the requirements for the\\
 		Degree of Bachelor of Arts with Honors\\
 		in Chemistry
-		\vspace{1.5 cm}
-
+		\begin{figure}[H]
+			\centering
+			\includegraphics[width=0.3\textwidth]{Williams_College_Seal.png}
+		\end{figure}
 		Williams College\\
 		Williamstown, Massachusetts
 		\vspace{1.5 cm}
 
-		\today
+		May 14, 2019
 	\end{center}
 \end{titlepage}
 
